updated plugins API documentation

--- a/docs/master/1. Namespaces.md
+++ b/docs/master/1. Namespaces.md
@@ -10,3 +10,4 @@ This is a complete list of available namespaces:
 - [`Piwik\DataTable`](Piwik/DataTable)
 - [`Piwik\Period`](Piwik/Period)
 - [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
+- [`Piwik\Tracker`](Piwik/Tracker)
