--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -38,6 +38,7 @@ This is a complete list of available classes:
 - [`Piwik\ScheduledTime\Weekly`](Piwik/ScheduledTime/Weekly.md) &mdash; Weekly class is used to schedule tasks every week.
 - [`Piwik\SettingsPiwik`](Piwik/SettingsPiwik.md) &mdash; Class SettingsPiwik
 - [`Piwik\Site`](Piwik/Site.md)
+- [`Piwik\Tracker\Visit`](Piwik/Tracker/Visit.md) &mdash; Class used to handle a Visit.
 - [`Piwik\Url`](Piwik/Url.md) &mdash; Class to retrieve absolute URL or URI components of the current URL, and handle URL redirection.
 - [`Piwik\UrlHelper`](Piwik/UrlHelper.md) &mdash; Class UrlHelper
 - [`Piwik\Version`](Piwik/Version.md) &mdash; Piwik version information.
