--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -320,6 +320,7 @@ Index
 - [`getCurrencyFor()`](Piwik/Site.md#getCurrencyFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`getExcludedIpsFor()`](Piwik/Site.md#getExcludedIpsFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`getExcludedQueryParametersFor()`](Piwik/Site.md#getExcludedQueryParametersFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
+- [`generateUniqueVisitorId()`](Piwik/Tracker/Visit.md#generateUniqueVisitorId) &mdash; _Method in class_ [`Visit`](Piwik/Tracker/Visit.md)
 - [`getCurrentUrl()`](Piwik/Url.md#getCurrentUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getCurrentUrlWithoutQueryString()`](Piwik/Url.md#getCurrentUrlWithoutQueryString) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getCurrentUrlWithoutFileName()`](Piwik/Url.md#getCurrentUrlWithoutFileName) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
@@ -330,7 +331,7 @@ Index
 - [`getCurrentHost()`](Piwik/Url.md#getCurrentHost) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getCurrentQueryString()`](Piwik/Url.md#getCurrentQueryString) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getQueryStringFromParameters()`](Piwik/Url.md#getQueryStringFromParameters) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
-- [`getReferer()`](Piwik/Url.md#getReferer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
+- [`getReferrer()`](Piwik/Url.md#getReferrer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getQueryStringWithExcludedParameters()`](Piwik/UrlHelper.md#getQueryStringWithExcludedParameters) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
 - [`getLossyUrl()`](Piwik/UrlHelper.md#getLossyUrl) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
 - [`getParseUrlReverse()`](Piwik/UrlHelper.md#getParseUrlReverse) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
@@ -355,6 +356,7 @@ Index
 
 - [`Http`](Piwik/Http.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`Hourly`](Piwik/ScheduledTime/Hourly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
+- [`handle()`](Piwik/Tracker/Visit.md#handle) &mdash; _Method in class_ [`Visit`](Piwik/Tracker/Visit.md)
 - [`$how_visualization_only()`](Piwik/ViewDataTable.md#$how_visualization_only) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`$how_goals()`](Piwik/ViewDataTable.md#$how_goals) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`$how_exclude_low_population()`](Piwik/ViewDataTable.md#$how_exclude_low_population) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
@@ -417,6 +419,7 @@ Index
 - [`isSiteSearchEnabled()`](Piwik/Site.md#isSiteSearchEnabled) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`isEcommerceEnabledFor()`](Piwik/Site.md#isEcommerceEnabledFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`isSiteSearchEnabledFor()`](Piwik/Site.md#isSiteSearchEnabledFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
+- [`isHostKnownAliasHost()`](Piwik/Tracker/Visit.md#isHostKnownAliasHost) &mdash; _Method in class_ [`Visit`](Piwik/Tracker/Visit.md)
 - [`isValidHost()`](Piwik/Url.md#isValidHost) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`isLocalUrl()`](Piwik/Url.md#isLocalUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`isLookLikeUrl()`](Piwik/UrlHelper.md#isLookLikeUrl) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
@@ -523,7 +526,7 @@ Index
 - [`removePeriod()`](Piwik/Period/Range.md#removePeriod) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`redirectToModule()`](Piwik/Piwik.md#redirectToModule) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`rewriteTmpPathWithHostname()`](Piwik/SettingsPiwik.md#rewriteTmpPathWithHostname) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
-- [`redirectToReferer()`](Piwik/Url.md#redirectToReferer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
+- [`redirectToReferrer()`](Piwik/Url.md#redirectToReferrer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`redirectToUrl()`](Piwik/Url.md#redirectToUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`render()`](Piwik/View.md#render) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`$reportPropertiesCache()`](Piwik/ViewDataTable.md#$reportPropertiesCache) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
@@ -585,6 +588,7 @@ Index
 - [`Site`](Piwik/Site.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`setSites()`](Piwik/Site.md#setSites) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`setSitesFromArray()`](Piwik/Site.md#setSitesFromArray) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
+- [`setRequest()`](Piwik/Tracker/Visit.md#setRequest) &mdash; _Method in class_ [`Visit`](Piwik/Tracker/Visit.md)
 - [`saveTrustedHostnameInConfig()`](Piwik/Url.md#saveTrustedHostnameInConfig) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`setHost()`](Piwik/Url.md#setHost) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`setContentType()`](Piwik/View.md#setContentType) &mdash; _Method in class_ [`View`](Piwik/View.md)
@@ -615,6 +619,7 @@ Index
 
 - [`verbose()`](Piwik/Log.md#verbose) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
 - [`verifyNonce()`](Piwik/Nonce.md#verifyNonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
+- [`Visit`](Piwik/Tracker/Visit.md) &mdash; _Class in namespace_ [`Piwik\Tracker`](Piwik/Tracker)
 - [`Version`](Piwik/Version.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`View`](Piwik/View.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`ViewDataTable`](Piwik/ViewDataTable.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
