updated plugins API documentation

--- a/docs/master/1. Namespaces.md
+++ b/docs/master/1. Namespaces.md
@@ -8,6 +8,7 @@ This is a complete list of available namespaces:
 - [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor)
 - [`Piwik\Controller`](Piwik/Controller)
 - [`Piwik\DataTable`](Piwik/DataTable)
+- [`Piwik\Menu`](Piwik/Menu)
 - [`Piwik\Period`](Piwik/Period)
 - [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
 - [`Piwik\Tracker`](Piwik/Tracker)
