--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -21,6 +21,8 @@ This is a complete list of available classes:
 - [`Piwik\Http`](Piwik/Http.md) &mdash; Server-side http client to retrieve content from remote servers, and optionally save to a local file.
 - [`Piwik\IP`](Piwik/IP.md) &mdash; Handling IP addresses (both IPv4 and IPv6).
 - [`Piwik\Log`](Piwik/Log.md) &mdash; Logging utility.
+- [`Piwik\Menu\MenuAdmin`](Piwik/Menu/MenuAdmin.md)
+- [`Piwik\Menu\MenuTop`](Piwik/Menu/MenuTop.md)
 - [`Piwik\Metrics`](Piwik/Metrics.md) &mdash; This class holds the various mappings we use to internally store and manipulate metrics.
 - [`Piwik\MetricsFormatter`](Piwik/MetricsFormatter.md) &mdash; Class MetricsFormatter
 - [`Piwik\Nonce`](Piwik/Nonce.md) &mdash; Nonce class.
