--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -53,7 +53,10 @@ Index
 - [`addHour()`](Piwik/Date.md#addHour) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`addHourTo()`](Piwik/Date.md#addHourTo) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`addPeriod()`](Piwik/Date.md#addPeriod) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
+- [`addEntry()`](Piwik/Menu/MenuAdmin.md#addEntry) &mdash; _Method in class_ [`MenuAdmin`](Piwik/Menu/MenuAdmin.md)
+- [`addEntry()`](Piwik/Menu/MenuTop.md#addEntry) &mdash; _Method in class_ [`MenuTop`](Piwik/Menu/MenuTop.md)
 - [`addSubperiod()`](Piwik/Period/Day.md#addSubperiod) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
+- [`addAction()`](Piwik/Piwik.md#addAction) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`activate()`](Piwik/Plugin.md#activate) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`addForm()`](Piwik/View.md#addForm) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`assign()`](Piwik/View.md#assign) &mdash; _Method in class_ [`View`](Piwik/View.md)
@@ -462,6 +465,8 @@ Index
 - [`mergeSubtables()`](Piwik/DataTable/Map.md#mergeSubtables) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`$maxVisitsSummed()`](Piwik/DataTable/Row.md#$maxVisitsSummed) &mdash; _Property in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`mkdir()`](Piwik/Filesystem.md#mkdir) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
+- [`MenuAdmin`](Piwik/Menu/MenuAdmin.md) &mdash; _Class in namespace_ [`Piwik\Menu`](Piwik/Menu)
+- [`MenuTop`](Piwik/Menu/MenuTop.md) &mdash; _Class in namespace_ [`Piwik\Menu`](Piwik/Menu)
 - [`Metrics`](Piwik/Metrics.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`$mappingFromIdToName()`](Piwik/Metrics.md#$mappingFromIdToName) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
 - [`$mappingFromIdToNameGoal()`](Piwik/Metrics.md#$mappingFromIdToNameGoal) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
@@ -499,6 +504,7 @@ Index
 - [`prettyPrint()`](Piwik/IP.md#prettyPrint) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`parseDateRange()`](Piwik/Period/Range.md#parseDateRange) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`Piwik`](Piwik/Piwik.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`postEvent()`](Piwik/Piwik.md#postEvent) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`Plugin`](Piwik/Plugin.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`postLoad()`](Piwik/Plugin.md#postLoad) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`$priority()`](Piwik/ScheduledTask.md#$priority) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
@@ -603,6 +609,8 @@ Index
 - [`today()`](Piwik/Date.md#today) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`toString()`](Piwik/Period/Day.md#toString) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
 - [`toString()`](Piwik/Period/Year.md#toString) &mdash; _Method in class_ [`Year`](Piwik/Period/Year.md)
+- [`translate()`](Piwik/Piwik.md#translate) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
+- [`translateException()`](Piwik/Piwik.md#translateException) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 
 ### U
 
