updated plugins API documentation

--- a/docs/master/1. Namespaces.md
+++ b/docs/master/1. Namespaces.md
@@ -6,9 +6,9 @@ This is a complete list of available namespaces:
 - [`Piwik`](Piwik)
 - [`Piwik\API`](Piwik/API)
 - [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor)
-- [`Piwik\Controller`](Piwik/Controller)
 - [`Piwik\DataTable`](Piwik/DataTable)
 - [`Piwik\Menu`](Piwik/Menu)
 - [`Piwik\Period`](Piwik/Period)
+- [`Piwik\Plugin`](Piwik/Plugin)
 - [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
 - [`Piwik\Tracker`](Piwik/Tracker)
