--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -7,11 +7,9 @@ This is a complete list of available classes:
 - [`Piwik\Archive`](Piwik/Archive.md) &mdash; The archive object is used to query specific data for a day or a period of statistics for a given website.
 - [`Piwik\ArchiveProcessor\Day`](Piwik/ArchiveProcessor/Day.md) &mdash; This class
 - [`Piwik\ArchiveProcessor\Period`](Piwik/ArchiveProcessor/Period.md) &mdash; This class provides generic methods to archive data for a period (week / month / year).
-- [`Piwik\CacheFile`](Piwik/CacheFile.md) &mdash; Code originally inspired from OpenX - openx/plugins_repo/openXDeliveryCacheStore/extensions/deliveryCacheStore/oxCacheFile/oxCacheFile.class.php - openx/plugins_repo/openXDeliveryCacheStore/extensions/deliveryCacheStore/oxCacheFile/oxCacheFile.delivery.php
+- [`Piwik\CacheFile`](Piwik/CacheFile.md) &mdash; This class is used to cache data on the filesystem.
 - [`Piwik\Common`](Piwik/Common.md) &mdash; Static class providing functions used by both the CORE of Piwik and the visitor Tracking engine.
 - [`Piwik\Config`](Piwik/Config.md) &mdash; For general performance (and specifically, the Tracker), we use deferred (lazy) initialization and cache sections.
-- [`Piwik\Controller`](Piwik/Controller.md) &mdash; Parent class of all plugins Controllers (located in /plugins/PluginName/Controller.php It defines some helper functions controllers can use.
-- [`Piwik\Controller\Admin`](Piwik/Controller/Admin.md) &mdash; Parent class of all plugins Controllers with admin functions
 - [`Piwik\DataTable`](Piwik/DataTable.md) &mdash; ---- DataTable A DataTable is a data structure used to store complex tables of data.
 - [`Piwik\DataTable\Map`](Piwik/DataTable/Map.md) &mdash; The DataTable Map is a way to store an array of dataTable.
 - [`Piwik\DataTable\Row`](Piwik/DataTable/Row.md) &mdash; A DataTable is composed of rows.
@@ -33,6 +31,8 @@ This is a complete list of available classes:
 - [`Piwik\Period\Year`](Piwik/Period/Year.md)
 - [`Piwik\Piwik`](Piwik/Piwik.md) &mdash; Main piwik helper class.
 - [`Piwik\Plugin`](Piwik/Plugin.md) &mdash; Abstract class to define a Plugin.
+- [`Piwik\Plugin\Controller`](Piwik/Plugin/Controller.md) &mdash; Parent class of all plugins Controllers (located in /plugins/PluginName/Controller.php It defines some helper functions controllers can use.
+- [`Piwik\Plugin\ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md) &mdash; Parent class of all plugins Controllers with admin functions
 - [`Piwik\ScheduledTask`](Piwik/ScheduledTask.md) &mdash; ScheduledTask is used by the task scheduler and by plugins to configure runnable tasks.
 - [`Piwik\ScheduledTime\Daily`](Piwik/ScheduledTime/Daily.md) &mdash; Daily class is used to schedule tasks every day.
 - [`Piwik\ScheduledTime\Hourly`](Piwik/ScheduledTime/Hourly.md) &mdash; Hourly class is used to schedule tasks every hour.
