--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -31,7 +31,6 @@ Index
 - [`Archive`](Piwik/Archive.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`aggregateDataTableReports()`](Piwik/ArchiveProcessor/Period.md#aggregateDataTableReports) &mdash; _Method in class_ [`Period`](Piwik/ArchiveProcessor/Period.md)
 - [`aggregateNumericMetrics()`](Piwik/ArchiveProcessor/Period.md#aggregateNumericMetrics) &mdash; _Method in class_ [`Period`](Piwik/ArchiveProcessor/Period.md)
-- [`Admin`](Piwik/Controller/Admin.md) &mdash; _Class in namespace_ [`Piwik\Controller`](Piwik/Controller)
 - [`applyQueuedFilters()`](Piwik/DataTable.md#applyQueuedFilters) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`addDataTable()`](Piwik/DataTable.md#addDataTable) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`addRow()`](Piwik/DataTable.md#addRow) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -60,8 +59,6 @@ Index
 - [`activate()`](Piwik/Plugin.md#activate) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`addForm()`](Piwik/View.md#addForm) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`assign()`](Piwik/View.md#assign) &mdash; _Method in class_ [`View`](Piwik/View.md)
-- [`$atatable_css_class()`](Piwik/ViewDataTable.md#$atatable_css_class) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$atatable_js_type()`](Piwik/ViewDataTable.md#$atatable_js_type) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 
 ### B
 
@@ -72,7 +69,6 @@ Index
 - [`CacheFile`](Piwik/CacheFile.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`Common`](Piwik/Common.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`Config`](Piwik/Config.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
-- [`Controller`](Piwik/Controller.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`$c()`](Piwik/DataTable/Row.md#$c) &mdash; _Property in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`cleanPostSerialize()`](Piwik/DataTable/Row.md#cleanPostSerialize) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`compareElements()`](Piwik/DataTable/Row.md#compareElements) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
@@ -91,6 +87,8 @@ Index
 - [`checkUserHasSomeAdminAccess()`](Piwik/Piwik.md#checkUserHasSomeAdminAccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`checkUserHasViewAccess()`](Piwik/Piwik.md#checkUserHasViewAccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`checkUserHasSomeViewAccess()`](Piwik/Piwik.md#checkUserHasSomeViewAccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
+- [`Controller`](Piwik/Plugin/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
+- [`ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
 - [`$className()`](Piwik/ScheduledTask.md#$className) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`$cachedKnownSegmentsToArchive()`](Piwik/SettingsPiwik.md#$cachedKnownSegmentsToArchive) &mdash; _Property in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 - [`clearCache()`](Piwik/Site.md#clearCache) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
@@ -101,7 +99,6 @@ Index
 - [`Day`](Piwik/ArchiveProcessor/Day.md) &mdash; _Class in namespace_ [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor)
 - [`delete()`](Piwik/CacheFile.md#delete) &mdash; _Method in class_ [`CacheFile`](Piwik/CacheFile.md)
 - [`deleteAll()`](Piwik/CacheFile.md#deleteAll) &mdash; _Method in class_ [`CacheFile`](Piwik/CacheFile.md)
-- [`displayWarningIfConfigFileNotWritable()`](Piwik/Controller/Admin.md#displayWarningIfConfigFileNotWritable) &mdash; _Method in class_ [`Admin`](Piwik/Controller/Admin.md)
 - [`DataTable`](Piwik/DataTable.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`deleteColumn()`](Piwik/DataTable.md#deleteColumn) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`deleteColumns()`](Piwik/DataTable.md#deleteColumns) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -123,6 +120,7 @@ Index
 - [`discardNonce()`](Piwik/Nonce.md#discardNonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
 - [`Day`](Piwik/Period/Day.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
 - [`deactivate()`](Piwik/Plugin.md#deactivate) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`displayWarningIfConfigFileNotWritable()`](Piwik/Plugin/ControllerAdmin.md#displayWarningIfConfigFileNotWritable) &mdash; _Method in class_ [`ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md)
 - [`Daily`](Piwik/ScheduledTime/Daily.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
 
 ### E
@@ -134,12 +132,6 @@ Index
 - [`error()`](Piwik/Log.md#error) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
 - [`exitWithErrorMessage()`](Piwik/Piwik.md#exitWithErrorMessage) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`extractSearchEngineInformationFromUrl()`](Piwik/UrlHelper.md#extractSearchEngineInformationFromUrl) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
-- [`$efault_view_type()`](Piwik/ViewDataTable.md#$efault_view_type) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$earch_recursive()`](Piwik/ViewDataTable.md#$earch_recursive) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$etrics_documentation()`](Piwik/ViewDataTable.md#$etrics_documentation) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$elf_url()`](Piwik/ViewDataTable.md#$elf_url) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$elated_reports()`](Piwik/ViewDataTable.md#$elated_reports) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$equest_parameters_to_modify()`](Piwik/ViewDataTable.md#$equest_parameters_to_modify) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 
 ### F
 
@@ -155,7 +147,6 @@ Index
 - [`fetchAssoc()`](Piwik/Db.md#fetchAssoc) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`Filesystem`](Piwik/Filesystem.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`fetchRemoteFile()`](Piwik/Http.md#fetchRemoteFile) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
-- [`$fter_data_loaded_functions()`](Piwik/ViewDataTable.md#$fter_data_loaded_functions) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`factory()`](Piwik/ViewDataTable.md#factory) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 
 ### G
@@ -180,11 +171,6 @@ Index
 - [`getRequestVar()`](Piwik/Common.md#getRequestVar) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`getLanguagesList()`](Piwik/Common.md#getLanguagesList) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`getLanguageToCountryList()`](Piwik/Common.md#getLanguageToCountryList) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
-- [`getInstance()`](Piwik/Config.md#getInstance) &mdash; _Method in class_ [`Config`](Piwik/Config.md)
-- [`getDefaultAction()`](Piwik/Controller.md#getDefaultAction) &mdash; _Method in class_ [`Controller`](Piwik/Controller.md)
-- [`getDateRangeRelativeToEndDate()`](Piwik/Controller.md#getDateRangeRelativeToEndDate) &mdash; _Method in class_ [`Controller`](Piwik/Controller.md)
-- [`getCalendarPrettyDate()`](Piwik/Controller.md#getCalendarPrettyDate) &mdash; _Method in class_ [`Controller`](Piwik/Controller.md)
-- [`getPrettyDate()`](Piwik/Controller.md#getPrettyDate) &mdash; _Method in class_ [`Controller`](Piwik/Controller.md)
 - [`getSortedByColumnName()`](Piwik/DataTable.md#getSortedByColumnName) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getRowsCountBeforeLimitFilter()`](Piwik/DataTable.md#getRowsCountBeforeLimitFilter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getRowFromLabel()`](Piwik/DataTable.md#getRowFromLabel) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -287,6 +273,10 @@ Index
 - [`getVersion()`](Piwik/Plugin.md#getVersion) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`getPluginName()`](Piwik/Plugin.md#getPluginName) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`getPluginNameFromBacktrace()`](Piwik/Plugin.md#getPluginNameFromBacktrace) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`getDefaultAction()`](Piwik/Plugin/Controller.md#getDefaultAction) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
+- [`getDateRangeRelativeToEndDate()`](Piwik/Plugin/Controller.md#getDateRangeRelativeToEndDate) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
+- [`getCalendarPrettyDate()`](Piwik/Plugin/Controller.md#getCalendarPrettyDate) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
+- [`getPrettyDate()`](Piwik/Plugin/Controller.md#getPrettyDate) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`getObjectInstance()`](Piwik/ScheduledTask.md#getObjectInstance) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`getClassName()`](Piwik/ScheduledTask.md#getClassName) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`getMethodName()`](Piwik/ScheduledTask.md#getMethodName) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
@@ -346,8 +336,8 @@ Index
 - [`getReportApiMethod()`](Piwik/ViewDataTable.md#getReportApiMethod) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`getVisualizationClass()`](Piwik/ViewDataTable.md#getVisualizationClass) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`getViewDataTableId()`](Piwik/ViewDataTable.md#getViewDataTableId) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`getClientSideProperties()`](Piwik/ViewDataTable.md#getClientSideProperties) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`getClientSideParameters()`](Piwik/ViewDataTable.md#getClientSideParameters) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
+- [`getClientSideConfigProperties()`](Piwik/ViewDataTable.md#getClientSideConfigProperties) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
+- [`getClientSideRequestParameters()`](Piwik/ViewDataTable.md#getClientSideRequestParameters) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`getOverridableProperties()`](Piwik/ViewDataTable.md#getOverridableProperties) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`getCurrentControllerAction()`](Piwik/ViewDataTable.md#getCurrentControllerAction) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`getCurrentControllerName()`](Piwik/ViewDataTable.md#getCurrentControllerName) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
@@ -360,29 +350,6 @@ Index
 - [`Http`](Piwik/Http.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`Hourly`](Piwik/ScheduledTime/Hourly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
 - [`handle()`](Piwik/Tracker/Visit.md#handle) &mdash; _Method in class_ [`Visit`](Piwik/Tracker/Visit.md)
-- [`$how_visualization_only()`](Piwik/ViewDataTable.md#$how_visualization_only) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_goals()`](Piwik/ViewDataTable.md#$how_goals) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_exclude_low_population()`](Piwik/ViewDataTable.md#$how_exclude_low_population) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_table()`](Piwik/ViewDataTable.md#$how_table) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_table_all_columns()`](Piwik/ViewDataTable.md#$how_table_all_columns) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_footer()`](Piwik/ViewDataTable.md#$how_footer) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_footer_icons()`](Piwik/ViewDataTable.md#$how_footer_icons) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_all_views_icons()`](Piwik/ViewDataTable.md#$how_all_views_icons) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_active_view_icon()`](Piwik/ViewDataTable.md#$how_active_view_icon) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_flatten_table()`](Piwik/ViewDataTable.md#$how_flatten_table) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_limit_control()`](Piwik/ViewDataTable.md#$how_limit_control) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_bar_chart()`](Piwik/ViewDataTable.md#$how_bar_chart) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_pie_chart()`](Piwik/ViewDataTable.md#$how_pie_chart) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_tag_cloud()`](Piwik/ViewDataTable.md#$how_tag_cloud) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_export_as_rss_feed()`](Piwik/ViewDataTable.md#$how_export_as_rss_feed) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_ecommerce()`](Piwik/ViewDataTable.md#$how_ecommerce) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_footer_message()`](Piwik/ViewDataTable.md#$how_footer_message) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_export_as_image_icon()`](Piwik/ViewDataTable.md#$how_export_as_image_icon) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_non_core_visualizations()`](Piwik/ViewDataTable.md#$how_non_core_visualizations) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_search()`](Piwik/ViewDataTable.md#$how_search) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_related_reports()`](Piwik/ViewDataTable.md#$how_related_reports) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_pagination_control()`](Piwik/ViewDataTable.md#$how_pagination_control) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$how_offset_information()`](Piwik/ViewDataTable.md#$how_offset_information) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`hasReportBeenPurged()`](Piwik/ViewDataTable.md#hasReportBeenPurged) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 
 ### I
@@ -427,20 +394,6 @@ Index
 - [`isLocalUrl()`](Piwik/Url.md#isLocalUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`isLookLikeUrl()`](Piwik/UrlHelper.md#isLookLikeUrl) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
 - [`initializeTwig()`](Piwik/View.md#initializeTwig) &mdash; _Method in class_ [`View`](Piwik/View.md)
-- [`$ide_annotations_view()`](Piwik/ViewDataTable.md#$ide_annotations_view) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$ilter_excludelowpop()`](Piwik/ViewDataTable.md#$ilter_excludelowpop) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$ilter_excludelowpop_value()`](Piwik/ViewDataTable.md#$ilter_excludelowpop_value) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$isable_generic_filters()`](Piwik/ViewDataTable.md#$isable_generic_filters) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$isable_queued_filters()`](Piwik/ViewDataTable.md#$isable_queued_filters) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$itle()`](Piwik/ViewDataTable.md#$itle) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$ilter_sort_column()`](Piwik/ViewDataTable.md#$ilter_sort_column) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$ilter_sort_order()`](Piwik/ViewDataTable.md#$ilter_sort_order) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$ilter_column()`](Piwik/ViewDataTable.md#$ilter_column) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$ilter_limit()`](Piwik/ViewDataTable.md#$ilter_limit) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$ilter_offset()`](Piwik/ViewDataTable.md#$ilter_offset) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$ilter_pattern()`](Piwik/ViewDataTable.md#$ilter_pattern) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$isualization_properties()`](Piwik/ViewDataTable.md#$isualization_properties) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$ilters()`](Piwik/ViewDataTable.md#$ilters) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 
 ### J
 
@@ -482,17 +435,12 @@ Index
 - [`now()`](Piwik/Date.md#now) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`N2P()`](Piwik/IP.md#N2P) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`Nonce`](Piwik/Nonce.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
-- [`$nable_sort()`](Piwik/ViewDataTable.md#$nable_sort) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 
 ### O
 
 - [`opCacheInvalidate()`](Piwik/CacheFile.md#opCacheInvalidate) &mdash; _Method in class_ [`CacheFile`](Piwik/CacheFile.md)
 - [`optimizeTables()`](Piwik/Db.md#optimizeTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`$objectInstance()`](Piwik/ScheduledTask.md#$objectInstance) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
-- [`$ooter_icons()`](Piwik/ViewDataTable.md#$ooter_icons) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$ooltip_metadata_name()`](Piwik/ViewDataTable.md#$ooltip_metadata_name) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$ocumentation()`](Piwik/ViewDataTable.md#$ocumentation) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$olumns_to_display()`](Piwik/ViewDataTable.md#$olumns_to_display) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 
 ### P
 
@@ -520,7 +468,6 @@ Index
 
 - [`Request`](Piwik/API/Request.md) &mdash; _Class in namespace_ [`Piwik\API`](Piwik/API)
 - [`reloadAuthUsingTokenAuth()`](Piwik/API/Request.md#reloadAuthUsingTokenAuth) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
-- [`redirectToIndex()`](Piwik/Controller.md#redirectToIndex) &mdash; _Method in class_ [`Controller`](Piwik/Controller.md)
 - [`renameColumn()`](Piwik/DataTable.md#renameColumn) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`renameColumn()`](Piwik/DataTable/Map.md#renameColumn) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`Row`](Piwik/DataTable/Row.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable)
@@ -531,21 +478,18 @@ Index
 - [`Range`](Piwik/Period/Range.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
 - [`removePeriod()`](Piwik/Period/Range.md#removePeriod) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`redirectToModule()`](Piwik/Piwik.md#redirectToModule) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
+- [`redirectToIndex()`](Piwik/Plugin/Controller.md#redirectToIndex) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`rewriteTmpPathWithHostname()`](Piwik/SettingsPiwik.md#rewriteTmpPathWithHostname) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 - [`redirectToReferrer()`](Piwik/Url.md#redirectToReferrer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`redirectToUrl()`](Piwik/Url.md#redirectToUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`render()`](Piwik/View.md#render) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`$reportPropertiesCache()`](Piwik/ViewDataTable.md#$reportPropertiesCache) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$ranslations()`](Piwik/ViewDataTable.md#$ranslations) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`renderReport()`](Piwik/ViewDataTable.md#renderReport) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`render()`](Piwik/ViewDataTable.md#render) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 
 ### S
 
 - [`set()`](Piwik/CacheFile.md#set) &mdash; _Method in class_ [`CacheFile`](Piwik/CacheFile.md)
-- [`setHostValidationVariablesView()`](Piwik/Controller.md#setHostValidationVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Controller.md)
-- [`setPeriodVariablesView()`](Piwik/Controller.md#setPeriodVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Controller.md)
-- [`setBasicVariablesAdminView()`](Piwik/Controller/Admin.md#setBasicVariablesAdminView) &mdash; _Method in class_ [`Admin`](Piwik/Controller/Admin.md)
 - [`sort()`](Piwik/DataTable.md#sort) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setRowsCountBeforeLimitFilter()`](Piwik/DataTable.md#setRowsCountBeforeLimitFilter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setMaximumDepthLevelAllowedAtLeast()`](Piwik/DataTable.md#setMaximumDepthLevelAllowedAtLeast) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -582,6 +526,9 @@ Index
 - [`sanitizeIpRange()`](Piwik/IP.md#sanitizeIpRange) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`setDefaultEndDate()`](Piwik/Period/Range.md#setDefaultEndDate) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`setUserIsSuperUser()`](Piwik/Piwik.md#setUserIsSuperUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
+- [`setHostValidationVariablesView()`](Piwik/Plugin/Controller.md#setHostValidationVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
+- [`setPeriodVariablesView()`](Piwik/Plugin/Controller.md#setPeriodVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
+- [`setBasicVariablesAdminView()`](Piwik/Plugin/ControllerAdmin.md#setBasicVariablesAdminView) &mdash; _Method in class_ [`ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md)
 - [`ScheduledTask`](Piwik/ScheduledTask.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`$scheduledTime()`](Piwik/ScheduledTask.md#$scheduledTime) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`setDay()`](Piwik/ScheduledTime/Daily.md#setDay) &mdash; _Method in class_ [`Daily`](Piwik/ScheduledTime/Daily.md)
@@ -620,8 +567,6 @@ Index
 - [`uninstall()`](Piwik/Plugin.md#uninstall) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`Url`](Piwik/Url.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`UrlHelper`](Piwik/UrlHelper.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
-- [`$ustom_parameters()`](Piwik/ViewDataTable.md#$ustom_parameters) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`$ubtable_controller_action()`](Piwik/ViewDataTable.md#$ubtable_controller_action) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 
 ### V
 
@@ -639,10 +584,6 @@ Index
 - [`Week`](Piwik/Period/Week.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
 - [`Weekly`](Piwik/ScheduledTime/Weekly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
 
-### X
-
-- [`$xport_limit()`](Piwik/ViewDataTable.md#$xport_limit) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-
 ### Y
 
 - [`yesterday()`](Piwik/Date.md#yesterday) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
@@ -655,7 +596,6 @@ Index
 - [`__construct()`](Piwik/CacheFile.md#__construct) &mdash; _Method in class_ [`CacheFile`](Piwik/CacheFile.md)
 - [`__get()`](Piwik/Config.md#__get) &mdash; _Method in class_ [`Config`](Piwik/Config.md)
 - [`__set()`](Piwik/Config.md#__set) &mdash; _Method in class_ [`Config`](Piwik/Config.md)
-- [`__construct()`](Piwik/Controller.md#__construct) &mdash; _Method in class_ [`Controller`](Piwik/Controller.md)
 - [`__construct()`](Piwik/DataTable.md#__construct) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`__destruct()`](Piwik/DataTable.md#__destruct) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`__sleep()`](Piwik/DataTable.md#__sleep) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -669,13 +609,13 @@ Index
 - [`__toString()`](Piwik/Period/Day.md#__toString) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
 - [`__construct()`](Piwik/Period/Range.md#__construct) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`__construct()`](Piwik/Plugin.md#__construct) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`__construct()`](Piwik/Plugin/Controller.md#__construct) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`__construct()`](Piwik/ScheduledTask.md#__construct) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`__construct()`](Piwik/Site.md#__construct) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`__toString()`](Piwik/Site.md#__toString) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`__construct()`](Piwik/View.md#__construct) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`__set()`](Piwik/View.md#__set) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`__get()`](Piwik/View.md#__get) &mdash; _Method in class_ [`View`](Piwik/View.md)
-- [`$_axis_unit()`](Piwik/ViewDataTable.md#$_axis_unit) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`__construct()`](Piwik/ViewDataTable.md#__construct) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`__get()`](Piwik/ViewDataTable.md#__get) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`__set()`](Piwik/ViewDataTable.md#__set) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
