updated plugins API documentation

--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -171,6 +171,7 @@ Index
 - [`getRequestVar()`](Piwik/Common.md#getRequestVar) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`getLanguagesList()`](Piwik/Common.md#getLanguagesList) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`getLanguageToCountryList()`](Piwik/Common.md#getLanguageToCountryList) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
+- [`getInstance()`](Piwik/Config.md#getInstance) &mdash; _Method in class_ [`Config`](Piwik/Config.md)
 - [`getSortedByColumnName()`](Piwik/DataTable.md#getSortedByColumnName) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getRowsCountBeforeLimitFilter()`](Piwik/DataTable.md#getRowsCountBeforeLimitFilter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getRowFromLabel()`](Piwik/DataTable.md#getRowFromLabel) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -224,6 +225,7 @@ Index
 - [`getNonProxyIpFromHeader()`](Piwik/IP.md#getNonProxyIpFromHeader) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`getLastIpFromList()`](Piwik/IP.md#getLastIpFromList) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`getHostByAddr()`](Piwik/IP.md#getHostByAddr) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
+- [`getInstance()`](Piwik/Log.md#getInstance) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
 - [`getVisitsMetricNames()`](Piwik/Metrics.md#getVisitsMetricNames) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
 - [`getMappingFromIdToName()`](Piwik/Metrics.md#getMappingFromIdToName) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
 - [`getUnit()`](Piwik/Metrics.md#getUnit) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
