updated plugins API documentation

--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -469,6 +469,7 @@ Index
 ### R
 
 - [`Request`](Piwik/API/Request.md) &mdash; _Class in namespace_ [`Piwik\API`](Piwik/API)
+- [`renameModule()`](Piwik/API/Request.md#renameModule) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
 - [`reloadAuthUsingTokenAuth()`](Piwik/API/Request.md#reloadAuthUsingTokenAuth) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
 - [`renameColumn()`](Piwik/DataTable.md#renameColumn) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`renameColumn()`](Piwik/DataTable/Map.md#renameColumn) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
