updated plugins API documentation

--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -4,7 +4,7 @@ Classes
 This is a complete list of available classes:
 
 - [`Piwik\API\Request`](Piwik/API/Request.md) &mdash; An API request is the object used to make a call to the API and get the result.
-- [`Piwik\Archive`](Piwik/Archive.md) &mdash; The archive object is used to query specific data for a day or a period of statistics for a given website.
+- [`Piwik\Archive`](Piwik/Archive.md) &mdash; The **Archive** class is used to query archive data for a set of sites, a set of periods and a segment.
 - [`Piwik\ArchiveProcessor\Day`](Piwik/ArchiveProcessor/Day.md) &mdash; This class
 - [`Piwik\ArchiveProcessor\Period`](Piwik/ArchiveProcessor/Period.md) &mdash; This class provides generic methods to archive data for a period (week / month / year).
 - [`Piwik\CacheFile`](Piwik/CacheFile.md) &mdash; This class is used to cache data on the filesystem.
