updated plugins API documentation

--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -33,6 +33,7 @@ This is a complete list of available classes:
 - [`Piwik\Plugin`](Piwik/Plugin.md) &mdash; Abstract class to define a Plugin.
 - [`Piwik\Plugin\Controller`](Piwik/Plugin/Controller.md) &mdash; Parent class of all plugins Controllers (located in /plugins/PluginName/Controller.php It defines some helper functions controllers can use.
 - [`Piwik\Plugin\ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md) &mdash; Parent class of all plugins Controllers with admin functions
+- [`Piwik\Plugin\ViewDataTable`](Piwik/Plugin/ViewDataTable.md) &mdash; This class is used to load (from the API) and customize the output of a given DataTable.
 - [`Piwik\ScheduledTask`](Piwik/ScheduledTask.md) &mdash; ScheduledTask is used by the task scheduler and by plugins to configure runnable tasks.
 - [`Piwik\ScheduledTime\Daily`](Piwik/ScheduledTime/Daily.md) &mdash; Daily class is used to schedule tasks every day.
 - [`Piwik\ScheduledTime\Hourly`](Piwik/ScheduledTime/Hourly.md) &mdash; Hourly class is used to schedule tasks every hour.
