--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -89,6 +89,7 @@ Index
 - [`checkUserHasSomeViewAccess()`](Piwik/Piwik.md#checkUserHasSomeViewAccess) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`Controller`](Piwik/Plugin/Controller.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
 - [`ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
+- [`$config()`](Piwik/Plugin/ViewDataTable.md#$config) &mdash; _Property in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`$className()`](Piwik/ScheduledTask.md#$className) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`$cachedKnownSegmentsToArchive()`](Piwik/SettingsPiwik.md#$cachedKnownSegmentsToArchive) &mdash; _Property in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 - [`clearCache()`](Piwik/Site.md#clearCache) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
@@ -154,6 +155,7 @@ Index
 - [`getRequestArrayFromString()`](Piwik/API/Request.md#getRequestArrayFromString) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
 - [`getClassNameAPI()`](Piwik/API/Request.md#getClassNameAPI) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
 - [`getRequestParametersGET()`](Piwik/API/Request.md#getRequestParametersGET) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
+- [`getBaseReportUrl()`](Piwik/API/Request.md#getBaseReportUrl) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
 - [`getCurrentUrlWithoutGenericFilters()`](Piwik/API/Request.md#getCurrentUrlWithoutGenericFilters) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
 - [`getRawSegmentFromRequest()`](Piwik/API/Request.md#getRawSegmentFromRequest) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
 - [`getNumeric()`](Piwik/Archive.md#getNumeric) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
@@ -278,6 +280,14 @@ Index
 - [`getDateRangeRelativeToEndDate()`](Piwik/Plugin/Controller.md#getDateRangeRelativeToEndDate) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`getCalendarPrettyDate()`](Piwik/Plugin/Controller.md#getCalendarPrettyDate) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`getPrettyDate()`](Piwik/Plugin/Controller.md#getPrettyDate) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
+- [`getDefaultConfig()`](Piwik/Plugin/ViewDataTable.md#getDefaultConfig) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
+- [`getDefaultRequestConfig()`](Piwik/Plugin/ViewDataTable.md#getDefaultRequestConfig) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
+- [`getViewDataTableId()`](Piwik/Plugin/ViewDataTable.md#getViewDataTableId) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
+- [`getDataTable()`](Piwik/Plugin/ViewDataTable.md#getDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
+- [`getIdsWithInheritance()`](Piwik/Plugin/ViewDataTable.md#getIdsWithInheritance) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
+- [`getDefaultDataTableCssClass()`](Piwik/Plugin/ViewDataTable.md#getDefaultDataTableCssClass) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
+- [`getVisualizationInfoFor()`](Piwik/Plugin/ViewDataTable.md#getVisualizationInfoFor) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
+- [`getOverridableProperties()`](Piwik/Plugin/ViewDataTable.md#getOverridableProperties) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`getObjectInstance()`](Piwik/ScheduledTask.md#getObjectInstance) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`getClassName()`](Piwik/ScheduledTask.md#getClassName) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`getMethodName()`](Piwik/ScheduledTask.md#getMethodName) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
@@ -334,24 +344,14 @@ Index
 - [`getPathAndQueryFromUrl()`](Piwik/UrlHelper.md#getPathAndQueryFromUrl) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
 - [`getTemplateFile()`](Piwik/View.md#getTemplateFile) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`getTemplateVars()`](Piwik/View.md#getTemplateVars) &mdash; _Method in class_ [`View`](Piwik/View.md)
-- [`getReportApiMethod()`](Piwik/ViewDataTable.md#getReportApiMethod) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`getVisualizationClass()`](Piwik/ViewDataTable.md#getVisualizationClass) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`getViewDataTableId()`](Piwik/ViewDataTable.md#getViewDataTableId) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`getClientSideConfigProperties()`](Piwik/ViewDataTable.md#getClientSideConfigProperties) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`getClientSideRequestParameters()`](Piwik/ViewDataTable.md#getClientSideRequestParameters) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`getOverridableProperties()`](Piwik/ViewDataTable.md#getOverridableProperties) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`getCurrentControllerAction()`](Piwik/ViewDataTable.md#getCurrentControllerAction) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`getCurrentControllerName()`](Piwik/ViewDataTable.md#getCurrentControllerName) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`getDataTable()`](Piwik/ViewDataTable.md#getDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`getRequestArray()`](Piwik/ViewDataTable.md#getRequestArray) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`getDefaultDataTableCssClass()`](Piwik/ViewDataTable.md#getDefaultDataTableCssClass) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
+- [`getAvailableVisualizations()`](Piwik/ViewDataTable.md#getAvailableVisualizations) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
+- [`getNonCoreVisualizations()`](Piwik/ViewDataTable.md#getNonCoreVisualizations) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 
 ### H
 
 - [`Http`](Piwik/Http.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`Hourly`](Piwik/ScheduledTime/Hourly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
 - [`handle()`](Piwik/Tracker/Visit.md#handle) &mdash; _Method in class_ [`Visit`](Piwik/Tracker/Visit.md)
-- [`hasReportBeenPurged()`](Piwik/ViewDataTable.md#hasReportBeenPurged) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 
 ### I
 
@@ -382,6 +382,8 @@ Index
 - [`isValidEmailString()`](Piwik/Piwik.md#isValidEmailString) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`install()`](Piwik/Plugin.md#install) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`isTheme()`](Piwik/Plugin.md#isTheme) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`isViewDataTableId()`](Piwik/Plugin/ViewDataTable.md#isViewDataTableId) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
+- [`isRequestingSingleDataTable()`](Piwik/Plugin/ViewDataTable.md#isRequestingSingleDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`isUserCredentialsSanityCheckEnabled()`](Piwik/SettingsPiwik.md#isUserCredentialsSanityCheckEnabled) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 - [`isSegmentationEnabled()`](Piwik/SettingsPiwik.md#isSegmentationEnabled) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 - [`isUniqueVisitorsEnabled()`](Piwik/SettingsPiwik.md#isUniqueVisitorsEnabled) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
@@ -481,13 +483,13 @@ Index
 - [`removePeriod()`](Piwik/Period/Range.md#removePeriod) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`redirectToModule()`](Piwik/Piwik.md#redirectToModule) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`redirectToIndex()`](Piwik/Plugin/Controller.md#redirectToIndex) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
+- [`$requestConfig()`](Piwik/Plugin/ViewDataTable.md#$requestConfig) &mdash; _Property in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
+- [`render()`](Piwik/Plugin/ViewDataTable.md#render) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`rewriteTmpPathWithHostname()`](Piwik/SettingsPiwik.md#rewriteTmpPathWithHostname) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 - [`redirectToReferrer()`](Piwik/Url.md#redirectToReferrer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`redirectToUrl()`](Piwik/Url.md#redirectToUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`render()`](Piwik/View.md#render) &mdash; _Method in class_ [`View`](Piwik/View.md)
-- [`$reportPropertiesCache()`](Piwik/ViewDataTable.md#$reportPropertiesCache) &mdash; _Property in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 - [`renderReport()`](Piwik/ViewDataTable.md#renderReport) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`render()`](Piwik/ViewDataTable.md#render) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 
 ### S
 
@@ -531,6 +533,7 @@ Index
 - [`setHostValidationVariablesView()`](Piwik/Plugin/Controller.md#setHostValidationVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`setPeriodVariablesView()`](Piwik/Plugin/Controller.md#setPeriodVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`setBasicVariablesAdminView()`](Piwik/Plugin/ControllerAdmin.md#setBasicVariablesAdminView) &mdash; _Method in class_ [`ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md)
+- [`setDataTable()`](Piwik/Plugin/ViewDataTable.md#setDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`ScheduledTask`](Piwik/ScheduledTask.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`$scheduledTime()`](Piwik/ScheduledTask.md#$scheduledTime) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`setDay()`](Piwik/ScheduledTime/Daily.md#setDay) &mdash; _Method in class_ [`Daily`](Piwik/ScheduledTime/Daily.md)
@@ -549,8 +552,6 @@ Index
 - [`setContentType()`](Piwik/View.md#setContentType) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`setXFrameOptions()`](Piwik/View.md#setXFrameOptions) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`singleReport()`](Piwik/View.md#singleReport) &mdash; _Method in class_ [`View`](Piwik/View.md)
-- [`setDataTable()`](Piwik/ViewDataTable.md#setDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`shouldLoadExpanded()`](Piwik/ViewDataTable.md#shouldLoadExpanded) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
 
 ### T
 
@@ -574,6 +575,7 @@ Index
 
 - [`verbose()`](Piwik/Log.md#verbose) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
 - [`verifyNonce()`](Piwik/Nonce.md#verifyNonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
+- [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md) &mdash; _Class in namespace_ [`Piwik\Plugin`](Piwik/Plugin)
 - [`Visit`](Piwik/Tracker/Visit.md) &mdash; _Class in namespace_ [`Piwik\Tracker`](Piwik/Tracker)
 - [`Version`](Piwik/Version.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`View`](Piwik/View.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
@@ -612,13 +614,10 @@ Index
 - [`__construct()`](Piwik/Period/Range.md#__construct) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`__construct()`](Piwik/Plugin.md#__construct) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`__construct()`](Piwik/Plugin/Controller.md#__construct) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
+- [`__construct()`](Piwik/Plugin/ViewDataTable.md#__construct) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`__construct()`](Piwik/ScheduledTask.md#__construct) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`__construct()`](Piwik/Site.md#__construct) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`__toString()`](Piwik/Site.md#__toString) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`__construct()`](Piwik/View.md#__construct) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`__set()`](Piwik/View.md#__set) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`__get()`](Piwik/View.md#__get) &mdash; _Method in class_ [`View`](Piwik/View.md)
-- [`__construct()`](Piwik/ViewDataTable.md#__construct) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`__get()`](Piwik/ViewDataTable.md#__get) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`__set()`](Piwik/ViewDataTable.md#__set) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
-- [`__call()`](Piwik/ViewDataTable.md#__call) &mdash; _Method in class_ [`ViewDataTable`](Piwik/ViewDataTable.md)
